fix better-auth-ui css

--- a/packages/website/src/styles.css
+++ b/packages/website/src/styles.css
@@ -141,4 +141,4 @@ code {
   }
 }
 
-@source "../node_modules/@daveyplate/better-auth-ui";
+@source "../../../node_modules/@daveyplate/better-auth-ui";
