--- a/packages/vscode-webui/src/components/message/markdown.css
+++ b/packages/vscode-webui/src/components/message/markdown.css
@@ -7,3 +7,7 @@
   color: var(--vscode-textPreformat-foreground);
   background-color: var(--vscode-textPreformat-background);
 }
+
+.code-block code {
+  background-color: transparent !important;
+}
