fix(webui): minor tool style adjust (#216)
* chore(storybook): support light theme

* fix(webui): minor tool style adjust

--- a/packages/vscode-webui/.storybook/vscode-modern-dark.css
+++ b/packages/vscode-webui/.storybook/vscode-modern-dark.css
@@ -1,4 +1,4 @@
-:root {
+.vscode-modern-dark {
   -webkit-locale: "en";
   --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
