--- a/packages/vscode-webui/src/components/message/markdown.css
+++ b/packages/vscode-webui/src/components/message/markdown.css
@@ -1,3 +1,5 @@
+@reference '../../styles.css';
+
 .inline-code::before,
 .inline-code::after {
   content: none;
@@ -6,4 +8,45 @@
 .inline-code {
   color: var(--vscode-textPreformat-foreground);
   background-color: var(--vscode-textPreformat-background);
+}
+
+h1,
+h2,
+h3 {
+  @apply text-lg;
+}
+
+h1 {
+  @apply uppercase;
+}
+
+h2::before {
+  content: "§ ";
+}
+
+h3 {
+  @apply underline;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  @apply my-0 mt-0.5 mb-1;
+}
+
+ol,
+li,
+p,
+ul,
+pre {
+  @apply my-0;
+}
+
+pre {
+  @apply mt-1 p-0;
+}
+
+p {
+  @apply leading-relaxed;
 }
