fix(styles): update chart color variables to use oklch format

--- a/packages/website/src/styles.css
+++ b/packages/website/src/styles.css
@@ -38,11 +38,11 @@ code {
   --border: oklch(0.885 0.007 97.363);
   --input: oklch(0.762 0.016 98.353);
   --ring: oklch(0.59 0.124 43.79);
-  --chart-1: oklch(0.558 0.128 42.996);
-  --chart-2: oklch(0.69 0.158 290.411);
-  --chart-3: oklch(0.882 0.028 93.128);
-  --chart-4: oklch(0.882 0.04 298.179);
-  --chart-5: oklch(0.561 0.135 42.058);
+  --chart-1: 12 76% 61%;
+  --chart-2: 173 58% 39%;
+  --chart-3: 197 37% 24%;
+  --chart-4: 43 74% 66%;
+  --chart-5: 27 87% 67%;
   --radius: 0.5rem;
   --sidebar: oklch(0.966 0.008 98.879);
   --sidebar-foreground: oklch(0.359 0.005 106.652);
@@ -93,11 +93,11 @@ code {
   --border: oklch(0.362 0.01 106.893);
   --input: oklch(0.434 0.011 100.22);
   --ring: oklch(0.785 0.129 39.49);
-  --chart-1: oklch(0.558 0.128 42.996);
-  --chart-2: oklch(0.69 0.158 290.411);
-  --chart-3: oklch(0.213 0.008 95.424);
-  --chart-4: oklch(0.307 0.052 289.323);
-  --chart-5: oklch(0.561 0.135 42.058);
+  --chart-1: 12 76% 61%;
+  --chart-2: 173 58% 39%;
+  --chart-3: 197 37% 24%;
+  --chart-4: 43 74% 66%;
+  --chart-5: 27 87% 67%;
   --sidebar: oklch(0.236 0.002 67.708);
   --sidebar-foreground: oklch(0.807 0.014 93.014);
   --sidebar-primary: oklch(0.672 0.131 38.756);
